--- a/yulu.html
+++ b/yulu.html
@@ -12,14 +12,14 @@
         <video class="sec-video" src="images/yuluvideo.mp4"  autoplay muted loop></video>
         <img  class="video-overlay" src="https://yulu-blogs-cdn.yulu.bike/Home_banner_overlay_50725aa4e8.png" alt="overlay for video">
         <nav class="navbar">
-            <div class="logo">
-                <img src="https://yulu-blogs-cdn.yulu.bike/Yulu_Logo_903d3c4e9b.svg" alt="">
-            </div>
+  <div class="logo">
+    <img src="https://yulu-blogs-cdn.yulu.bike/Yulu_Logo_903d3c4e9b.svg" alt="Yulu Logo" />
+  </div>
 
-                <input type="checkbox" id="menu-toggle" class="menu-toggle">
-                <label for="menu-toggle" class="hamburger">&#9776;</label>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+  <label for="menu-toggle" class="hamburger">&#9776;</label>
 
-    <ul class="nav-links">
+  <ul class="nav-links">
     <li class="dropdown">
       <a href="#">Products</a>
       <ul class="dropdown-menu">
@@ -35,11 +35,13 @@
     <li><a href="#">Blogs</a></li>
     <li><a href="#">News Room</a></li>
     <li><a href="#">About</a></li>
-    <li class="download"><a class="give" href="#">Download <br>Yulu App</a></li>
-
   </ul>
 
-        </nav>
+  <div class="download-btn">
+    <a href="#">Download <br />Yulu App</a>
+  </div>
+</nav>
+
      </section>
  <script src="yulu.js"></script>   
 </body>
